Fixes a weird margin/wrapping issue on tablets
We were adding a bunch of extra left & right margin padding that was not
needed on smaller sizes. This also fixes an issue where the map was
pushed really far down the page if there wasn't an image.

--- a/app/styles/components/event-show-aside.less
+++ b/app/styles/components/event-show-aside.less
@@ -1,7 +1,18 @@
 .EventShowAside {
   @media (min-width: @screen-md-min) {
     text-align: right;
-    padding: 150px 90px 0;
+    padding-top: 20px;
+  }
+
+  @media (min-width: @screen-lg-min) {
+    padding-left: 90px;
+    padding-right: 90px;
+  }
+}
+
+.EventShowAside--withImage {
+  @media (min-width: @screen-lg-min) {
+    padding-top: 150px;
   }
 }
 
